--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@distube/ytdl-core": "^4.15.8",
+    "mandarino": "^3.1.202-5.6.30",
     "webvtt-parser": "^2.2.0"
   }
 }
